# oneiro

./: .gitignore  AGENTS.md  Containerfile  README.md  config.toml  pyproject.toml
.github/workflows/: agent.yaml  ci.yaml  container.yaml
scripts/: benchmark_offload.py
src/oneiro/: __init__.py  __main__.py  app.py  bot.py  civitai.py  config.py  device.py  filters.py  lora_detector.py  main.py  queue.py
src/oneiro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/oneiro/discord/: __init__.py  commands.py  handlers.py
src/oneiro/pipelines/: __init__.py  base.py  civitai_checkpoint.py  embedding.py  flux1.py  flux2.py  flux2_klein.py  long_prompt.py  lora.py  qwen.py  zimage.py
src/oneiro/services/: __init__.py  generation.py
tests/: conftest.py  test_bot.py  test_civitai.py  test_civitai_checkpoint.py  test_config.py  test_device.py  test_dream_params.py  test_embedding.py  test_filters.py  test_long_prompt.py  test_lora.py  test_lora_detector.py  test_pipelines_base.py  test_pipelines_flux1.py  test_pipelines_flux2.py  test_pipelines_flux2_klein.py  test_pipelines_qwen.py  test_pipelines_zimage.py  test_queue.py
